# ddns-sandbox

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
bind_key_api/: __init__.py  main.py  settings.py  store.py  tsig.py  zone_cleanup.py
deploy/: README.md  bind-key-api.env.example  install.sh  run.sh  uninstall.sh
deploy/caddy/: Caddyfile  README.md
deploy/container/: README.md
deploy/systemd/: bind-key-api.service
tests/: conftest.py  test_parallel_add.py  test_settings_zone.py  test_tsig_parse.py  test_zone_cleanup_parse.py
